[package]
name = "temporal_cache_py"
version = "0.1.5"
edition = "2021"
publish = false

[lib]
name = "temporal_cache"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
temporal_cache = { path = "./rust", version = "*" }
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true
